[gd_scene load_steps=2 format=2]

[ext_resource path="res://games/decks/CardUI.gd" type="Script" id=1]

[node name="CardUI" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimContainer" type="Node2D" parent="."]

[node name="Placeholder" type="Node2D" parent="AnimContainer"]

[node name="Front" type="Node2D" parent="AnimContainer"]

[node name="Back" type="Node2D" parent="AnimContainer"]

[node name="MouseArea" type="TextureButton" parent="AnimContainer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="AnimContainer/MouseArea" to="." method="_on_MouseArea_pressed"]
